--- a/client/app/src/main/res/values/themes.xml
+++ b/client/app/src/main/res/values/themes.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.IShop" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="LaunchTheme" parent="Theme.AppCompat.Light.NoActionBar" />
+    <!--    <style name="Theme.IShop" parent="android:Theme.Material.Light.NoActionBar" />-->
 </resources>
