--- a/client/app/src/main/res/values/themes.xml
+++ b/client/app/src/main/res/values/themes.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="LaunchTheme" parent="Theme.AppCompat.Light.NoActionBar" />
-    <!-- Base application theme. -->
+    <style name="LaunchTheme" parent="Theme.Material3.DayNight" />
 </resources>
