--- a/client/app/src/main/res/menu/bottom_toolbar.xml
+++ b/client/app/src/main/res/menu/bottom_toolbar.xml
@@ -16,6 +16,9 @@
         android:title="@string/search_btn"
         app:showAsAction="ifRoom|withText" />
     <item
-        android:id="@+id/btn_hidden"
-        android:enabled="false" />
+        android:id="@+id/navigate_btn"
+        android:enabled="false"
+        android:icon="@drawable/navigate"
+        android:title="@string/navigation_btn"
+        app:showAsAction="ifRoom|withText" />
 </menu>
